[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/misc/RegenHealthNode.gd" type="Script" id=1]

[node name="RegenHealthNode" type="Node2D"]
script = ExtResource( 1 )

[node name="RegenTimer" type="Timer" parent="."]

[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
